--- a/NGP_TermProject/NGP_TermProject.vcxproj.filters
+++ b/NGP_TermProject/NGP_TermProject.vcxproj.filters
@@ -13,6 +13,15 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="2019180016">
+      <UniqueIdentifier>{e5f79fe1-d349-4eef-b06a-380d48e4f209}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="2019180016\Header">
+      <UniqueIdentifier>{6f3a1b73-e5b7-4e3e-b588-0746055d9597}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="2019180016\Source">
+      <UniqueIdentifier>{d82f6465-9e75-4aab-90c7-17bc97b98a17}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -36,6 +45,9 @@
     <ClInclude Include="EventType.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Card.h">
+      <Filter>2019180016\Header</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NGP_TermProject.cpp">
@@ -49,6 +61,9 @@
     </ClCompile>
     <ClCompile Include="Packet.cpp">
       <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Card.cpp">
+      <Filter>2019180016\Source</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
