--- a/NGP_TermProject/NGP_TermProject.vcxproj
+++ b/NGP_TermProject/NGP_TermProject.vcxproj
@@ -130,6 +130,8 @@
     <ClInclude Include="Card.h" />
     <ClInclude Include="EventType.h" />
     <ClInclude Include="GameFramework.h" />
+    <ClInclude Include="Monster.h" />
+    <ClInclude Include="Object.h" />
     <ClInclude Include="Packet.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="NGP_TermProject.h" />
@@ -139,7 +141,9 @@
   <ItemGroup>
     <ClCompile Include="Card.cpp" />
     <ClCompile Include="GameFramework.cpp" />
+    <ClCompile Include="Monster.cpp" />
     <ClCompile Include="NGP_TermProject.cpp" />
+    <ClCompile Include="Object.cpp" />
     <ClCompile Include="Packet.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
