--- a/NGP_TermProject/NGP_TermProject.vcxproj.filters
+++ b/NGP_TermProject/NGP_TermProject.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClInclude Include="Card.h">
       <Filter>2019180016\Header</Filter>
     </ClInclude>
+    <ClInclude Include="Monster.h">
+      <Filter>2019180016\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="Object.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NGP_TermProject.cpp">
@@ -64,6 +70,12 @@
     </ClCompile>
     <ClCompile Include="Card.cpp">
       <Filter>2019180016\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Monster.cpp">
+      <Filter>2019180016\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Object.cpp">
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
