Class Wolf 추가 및 부모 클래스 멤버변수 protected로 변경

--- a/NGP_TermProject/NGP_TermProject.vcxproj
+++ b/NGP_TermProject/NGP_TermProject.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="NGP_TermProject.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Wolf.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Card.cpp" />
@@ -148,6 +149,7 @@
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Wolf.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="NGP_TermProject.rc" />
