--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Common.cpp" />
     <ClCompile Include="GameRoom.cpp" />
     <ClCompile Include="Server.cpp" />
   </ItemGroup>
