--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="GameRoom.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Common.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.h">
