--- a/NGP_TermProject/NGP_TermProject.vcxproj.filters
+++ b/NGP_TermProject/NGP_TermProject.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="Bone.h">
       <Filter>2019180016\Header</Filter>
     </ClInclude>
+    <ClInclude Include="OtherCard.h">
+      <Filter>2019180016\Header</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NGP_TermProject.cpp">
@@ -105,6 +108,9 @@
       <Filter>2019180016\Source</Filter>
     </ClCompile>
     <ClCompile Include="Bone.cpp">
+      <Filter>2019180016\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="OtherCard.cpp">
       <Filter>2019180016\Source</Filter>
     </ClCompile>
   </ItemGroup>
