--- a/NGP_TermProject/NGP_TermProject.vcxproj.filters
+++ b/NGP_TermProject/NGP_TermProject.vcxproj.filters
@@ -1,14 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="GameFramework.cpp" />
-    <ClCompile Include="NGP_TermProject.cpp" />
-    <ClCompile Include="Object.cpp" />
-    <ClCompile Include="Packet.cpp" />
-    <ClCompile Include="Player.cpp" />
-    <ClCompile Include="PlayerOwnedStates.cpp" />
-    <ClCompile Include="Scene.cpp" />
-    <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="Bone.cpp">
       <Filter>2019180016\Source</Filter>
     </ClCompile>
@@ -36,21 +28,32 @@
     <ClCompile Include="Wolf.cpp">
       <Filter>2019180016\Source</Filter>
     </ClCompile>
+    <ClCompile Include="GameFramework.cpp">
+      <Filter>2019182009\소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="NGP_TermProject.cpp">
+      <Filter>2019182009\소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Object.cpp">
+      <Filter>2019182009\소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Packet.cpp">
+      <Filter>2019182009\소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>2019182009\소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerOwnedStates.cpp">
+      <Filter>2019182009\소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Scene.cpp">
+      <Filter>2019182009\소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="stdafx.cpp">
+      <Filter>2019182009\소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="EventType.h" />
-    <ClInclude Include="GameFramework.h" />
-    <ClInclude Include="Object.h" />
-    <ClInclude Include="Packet.h" />
-    <ClInclude Include="Player.h" />
-    <ClInclude Include="PlayerOwnedStates.h" />
-    <ClInclude Include="Scene.h" />
-    <ClInclude Include="State.h" />
-    <ClInclude Include="StateMachine.h" />
-    <ClInclude Include="stdafx.h" />
-    <ClInclude Include="NGP_TermProject.h" />
-    <ClInclude Include="Resource.h" />
-    <ClInclude Include="targetver.h" />
     <ClInclude Include="Bat.h">
       <Filter>2019180016\Header</Filter>
     </ClInclude>
@@ -78,6 +81,45 @@
     <ClInclude Include="Wolf.h">
       <Filter>2019180016\Header</Filter>
     </ClInclude>
+    <ClInclude Include="EventType.h">
+      <Filter>2019182009\헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="GameFramework.h">
+      <Filter>2019182009\헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="NGP_TermProject.h">
+      <Filter>2019182009\헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Packet.h">
+      <Filter>2019182009\헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Object.h">
+      <Filter>2019182009\헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>2019182009\헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Resource.h">
+      <Filter>2019182009\헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerOwnedStates.h">
+      <Filter>2019182009\헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene.h">
+      <Filter>2019182009\헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="State.h">
+      <Filter>2019182009\헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="StateMachine.h">
+      <Filter>2019182009\헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="stdafx.h">
+      <Filter>2019182009\헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="targetver.h">
+      <Filter>2019182009\헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="NGP_TermProject.rc" />
@@ -95,6 +137,15 @@
     </Filter>
     <Filter Include="2019180016\Header">
       <UniqueIdentifier>{a742d424-bcd5-4660-b3c2-a26a79925001}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="2019182009">
+      <UniqueIdentifier>{2598d084-4349-49d0-a0d0-cba220318032}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="2019182009\헤더 파일">
+      <UniqueIdentifier>{d0e028df-291c-4026-b72d-0169ce604676}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="2019182009\소스 파일">
+      <UniqueIdentifier>{cd06199e-f7a0-44c0-9f8f-a09b7a99fcd1}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
