게임의 구조 추가
게임 타이틀 -> 로딩 -> 게임시작을 진행하기 위한 코드들

--- a/NGP_TermProject/NGP_TermProject.vcxproj.filters
+++ b/NGP_TermProject/NGP_TermProject.vcxproj.filters
@@ -52,6 +52,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>2019182009\소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Castle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bat.h">
@@ -120,6 +121,7 @@
     <ClInclude Include="targetver.h">
       <Filter>2019182009\헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Castle.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="NGP_TermProject.rc" />
