--- a/NGP_TermProject/NGP_TermProject.vcxproj
+++ b/NGP_TermProject/NGP_TermProject.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClInclude Include="Bat.h" />
     <ClInclude Include="Bone.h" />
+    <ClInclude Include="Castle.h" />
     <ClInclude Include="CommonMonster.h" />
     <ClInclude Include="OtherCard.h" />
     <ClInclude Include="Papyrus.h" />
@@ -153,6 +154,7 @@
   <ItemGroup>
     <ClCompile Include="Bat.cpp" />
     <ClCompile Include="Bone.cpp" />
+    <ClCompile Include="Castle.cpp" />
     <ClCompile Include="CommonMonster.cpp" />
     <ClCompile Include="OtherCard.cpp" />
     <ClCompile Include="Papyrus.cpp" />
