--- a/NGP_TermProject/NGP_TermProject.vcxproj.filters
+++ b/NGP_TermProject/NGP_TermProject.vcxproj.filters
@@ -52,7 +52,9 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>2019182009\소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Castle.cpp" />
+    <ClCompile Include="Castle.cpp">
+      <Filter>2019180016\Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bat.h">
@@ -121,7 +123,9 @@
     <ClInclude Include="targetver.h">
       <Filter>2019182009\헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Castle.h" />
+    <ClInclude Include="Castle.h">
+      <Filter>2019180016\Header</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="NGP_TermProject.rc" />
