성과 몬스터의 공격 상호작용을 위한 CastleInteraction 클래스 추가
추후 몬스터 스폰하면서 Intercation 넣어줘야함

--- a/NGP_TermProject/NGP_TermProject.vcxproj
+++ b/NGP_TermProject/NGP_TermProject.vcxproj
@@ -130,6 +130,7 @@
     <ClInclude Include="Bat.h" />
     <ClInclude Include="Bone.h" />
     <ClInclude Include="Castle.h" />
+    <ClInclude Include="CastleInteraction.h" />
     <ClInclude Include="CommonMonster.h" />
     <ClInclude Include="OtherCard.h" />
     <ClInclude Include="Papyrus.h" />
@@ -155,6 +156,7 @@
     <ClCompile Include="Bat.cpp" />
     <ClCompile Include="Bone.cpp" />
     <ClCompile Include="Castle.cpp" />
+    <ClCompile Include="CastleInteraction.cpp" />
     <ClCompile Include="CommonMonster.cpp" />
     <ClCompile Include="OtherCard.cpp" />
     <ClCompile Include="Papyrus.cpp" />
