상태 메세지를 정의하는 StateMassage 헤더 추가

--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="GameRoom.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="StateMassage.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
