--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -134,6 +134,7 @@
   <ItemGroup>
     <ClInclude Include="Common.h" />
     <ClInclude Include="GameRoom.h" />
+    <ClInclude Include="StateMassage.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
