--- a/NGP_TermProject/NGP_TermProject.vcxproj
+++ b/NGP_TermProject/NGP_TermProject.vcxproj
@@ -144,6 +144,7 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerOwnedStates.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="SkillObject.h" />
     <ClInclude Include="State.h" />
     <ClInclude Include="StateMachine.h" />
     <ClInclude Include="stdafx.h" />
@@ -170,6 +171,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayerOwnedStates.cpp" />
     <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="SkillObject.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
     </ClCompile>
