성 체력 변경시 메세지 송신 코드 추가

--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -48,9 +48,6 @@
     <ClCompile Include="Wolf.cpp">
       <Filter>2019180016\Source</Filter>
     </ClCompile>
-    <ClCompile Include="Castle.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="MonsterState.cpp">
       <Filter>2019180016\Source</Filter>
     </ClCompile>
@@ -58,6 +55,9 @@
       <Filter>2019180016\Source</Filter>
     </ClCompile>
     <ClCompile Include="MemoryStream.cpp">
+      <Filter>2019180016\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Castle.cpp">
       <Filter>2019180016\Source</Filter>
     </ClCompile>
   </ItemGroup>
@@ -83,9 +83,6 @@
     <ClInclude Include="Wolf.h">
       <Filter>2019180016\Header</Filter>
     </ClInclude>
-    <ClInclude Include="Castle.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="MonsterState.h">
       <Filter>2019180016\Header</Filter>
     </ClInclude>
@@ -93,6 +90,9 @@
       <Filter>2019180016\Header</Filter>
     </ClInclude>
     <ClInclude Include="MemoryStream.h">
+      <Filter>2019180016\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="Castle.h">
       <Filter>2019180016\Header</Filter>
     </ClInclude>
   </ItemGroup>
