--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="Castle.cpp">
       <Filter>2019180016\Source</Filter>
     </ClCompile>
+    <ClCompile Include="PlayerInfo.cpp">
+      <Filter>2019180016\Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.h">
@@ -93,6 +96,9 @@
       <Filter>2019180016\Header</Filter>
     </ClInclude>
     <ClInclude Include="Castle.h">
+      <Filter>2019180016\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerInfo.h">
       <Filter>2019180016\Header</Filter>
     </ClInclude>
   </ItemGroup>
