--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="Common.cpp" />
     <ClCompile Include="CommonMonster.cpp" />
     <ClCompile Include="GameRoom.cpp" />
+    <ClCompile Include="MemoryReadStream.cpp" />
     <ClCompile Include="MemoryWriteStream.cpp" />
     <ClCompile Include="Monster.cpp" />
     <ClCompile Include="MonsterState.cpp" />
@@ -147,6 +148,7 @@
     <ClInclude Include="Common.h" />
     <ClInclude Include="CommonMonster.h" />
     <ClInclude Include="GameRoom.h" />
+    <ClInclude Include="MemoryReadStream.h" />
     <ClInclude Include="MemoryWriteStream.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="MonsterState.h" />
