--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="Common.cpp" />
     <ClCompile Include="CommonMonster.cpp" />
     <ClCompile Include="GameRoom.cpp" />
+    <ClCompile Include="MemoryStream.cpp" />
     <ClCompile Include="Monster.cpp" />
     <ClCompile Include="MonsterState.cpp" />
     <ClCompile Include="MsgInstence.cpp" />
@@ -166,6 +167,7 @@
     <ClInclude Include="Common.h" />
     <ClInclude Include="CommonMonster.h" />
     <ClInclude Include="GameRoom.h" />
+    <ClInclude Include="MemoryStream.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="MonsterState.h" />
     <ClInclude Include="MsgInstence.h" />
