--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -153,9 +153,9 @@
     <ClCompile Include="GameRoom.cpp" />
     <ClCompile Include="Monster.cpp" />
     <ClCompile Include="MonsterState.cpp" />
-    <ClCompile Include="MsgInstence.cpp" />
     <ClCompile Include="Papyrus.cpp" />
     <ClCompile Include="PlayerInfo.cpp" />
+    <ClCompile Include="Random.cpp" />
     <ClCompile Include="Server.cpp" />
     <ClCompile Include="Wolf.cpp" />
   </ItemGroup>
@@ -170,9 +170,9 @@
     <ClInclude Include="MemoryStream.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="MonsterState.h" />
-    <ClInclude Include="MsgInstence.h" />
     <ClInclude Include="Papyrus.h" />
     <ClInclude Include="PlayerInfo.h" />
+    <ClInclude Include="Random.h" />
     <ClInclude Include="StateMessage.h" />
     <ClInclude Include="StreamGlobal.h" />
     <ClInclude Include="Wolf.h" />
