--- a/NGP_TermProject/NGP_TermProject.vcxproj.filters
+++ b/NGP_TermProject/NGP_TermProject.vcxproj.filters
@@ -67,6 +67,9 @@
     <ClCompile Include="..\MemStream\MemoryWriteStream.cpp">
       <Filter>2019180016\Stream</Filter>
     </ClCompile>
+    <ClCompile Include="..\Server\Common.cpp">
+      <Filter>2019180016\Stream</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bat.h">
